*Empty MediaWiki Message*

--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -30,7 +30,7 @@ Eurasian Golden Oriole (Oriolus oriolus) nest W IMG 9566.jpg|[[Agdef]] n umeksa 
 Oriolus oriolus MHNT 232 Foret de la Mamora Maroc RdN.jpg |thumb|Timellalin n umeksa wulli deg [[Asalay n Toulouse|usalay n Toulouse]]
 </gallery>
 
-Ameksa wulli d aylal iminig. Yettuɣal-d seg tmezduɣt-is n unebdu deg Tefriqt gar n tlemmast n Yebrir d taggara n Mayu s unect n [[Tehri|Izerrigen n tehri]]
+Ameksa wulli d aylal iminig. Yettuɣal-d seg tmezduɣt-is n unebdu deg Tefriqt gar n tlemmast n Yebrir d taggara n Mayu s unect n [[Tehri|Izerrigen n tehri]], dɣa deg wakud-a [[aseklu|isekla]] ččaṛayen d iferran. Ayen iy banen d akken [[awtem|iwetmen]] d [[tawtemt|twetmin]] ttinigen yal uzuf iman-is yerna d iwetmen id yettawaṭen d imenza. Dɣa iy tekker imenɣi deg teɣzi n tallit nni dgi id ttmagen-t tyuga n imeksa wulli
 
 == Asru ==
 
