--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Ameksa wulli''' neɣ '''Tuwriɣt''' ('''[[Assaɣ ussnan]]''': ''Oriolus oriolus'') d [[talmest]] n [[aylal|iylalen]] yeṭṭafaren [[tawsit (tasnudert)|tawsit]] n [[Telya]] deg [[tawacult (tasnudert)|twacult]] n [[Tilyatin|telyatin]], Talmest-a d tamnummsant n webleɣ s teɣzi igan gar n 22 ar 25 cm yerna tezmer ad tidir alamma d 8 n iseggasen. Ameksa wulli [[Tinigt n iylalen|aylal yettinigen]] deg unebdu ar [[Turuft|Uruppa]] d [[Asya talemmast]] d [[Tafriqt n Ugafa|Tefriqt ugafa]] ma deg [[tagrest|tegrest]] yettinig ar tlemmast d unẓul n Tefriqt 
+'''Ameksa wulli''' neɣ '''Tuwriɣt''' ('''[[Assaɣ ussnan]]''': ''Oriolus oriolus'') d [[talmest]] n [[aylal|iylalen]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Telya]] deg [[tawacult (tasnudert)|twacult]] n [[Tilyatin|telyatin]], Talmest-a d tamnummsant n webleɣ s teɣzi igan gar n 22 ar 25 cm yerna tezmer ad tidir alamma d 8 n iseggasen. Ameksa wulli [[Tinigt n iylalen|aylal yettinigen]] deg unebdu ar [[Turuft|Uruppa]] d [[Asya talemmast]] d [[Tafriqt n Ugafa|Tefriqt ugafa]] ma deg [[tagrest|tegrest]] yettinig ar tlemmast d unẓul n Tefriqt
 
 == Aglam ==
 Ariɣ n [[awtem|uwtem]] d awraɣ aweṛɣan. Yakk d [[afriw|wafriw]] n [[asallaf|wedfar]] d aberkan. Dɣa anaw n tmuɣlit-is temgarad yakk ɣef [[aylal|iylalen]] n iden yettidiren deg Uruppa d [[tamurt n Leqbayel|tmurt n Yiqbayliyen]]. Isem Alatin n umeksa wulli ''Oriolus'' dɣa awal-a yennumke-d ini awraɣ n weylal-a
