--- a/Tinigt_n_yigṭaṭ.mw
+++ b/Tinigt_n_yigṭaṭ.mw
@@ -3,3 +3,7 @@
 [[Tugna:BrantaLeucopsisMigration.jpg|thumb|300px|]]
 
 Aṭas n tumanin ssetrern-t asseknu n tezrawt n tinigt-a. Yakk imanayen erran tamawt i wsemdu n [[Asmeskel anezway|usmeskel anezway]] ɣef [[Asezdeɣ|ussezdeɣ]] yettnernin i kra n telmas am [[Asaflaw|usaflaw]] d
+
+
+
+[[Taggayt:tinigt n iɣersiwen]]
