*Empty MediaWiki Message*

--- a/Tinigt_n_yigṭaṭ.mw
+++ b/Tinigt_n_yigṭaṭ.mw
@@ -1,4 +1,4 @@
-'''Tinigt n iylalen''' d [[Tinigt n iɣersiwen|tinigt taɣersawt]] igan d amussu amsemhuy n waṭas n [[Talmest|telmas]] n [[aylal|iylalen]]. Agaǧǧi ayi deg umedya d tarewla ɣef kra n ideggan dgi yettedrus (yettenqas) wučči s usrag (f ssebba) n kra n tmentilin am usnifel n [[anezwu|unezwu]] mi ara ad yeɣli usemmiṭ maca tinigt-a tettak-d affud meqqren i [[amyaraw|wemyaraw]]. Deg wakuden igejdanen n tinigt yettili-d uqaful n wermud n tinigt deg tallit [[Aɣelluy|uɣelluy]] alamma d tlemmast n [[it|yiṭ]] neɣ ɣef 1 n tnezzayt, Deg [[tafrara|tefrara]] irennu-d wemdan n iminigen (iminigen n wass tikkelt-a)
+'''Tinigt n iylalen''' d [[Tinigt n iɣersiwen|tinigt taɣersawt]] igan d amussu amsemhuy n waṭas n [[Talmest|telmas]] n [[aylal|iylalen]]. Agaǧǧi ayi deg umedya d tarewla ɣef kra n ideggan dgi yettedrus (yettenqas) wučči s usrag (f ssebba) n kra n tmentilin am usnifel n [[anezwu|unezwu]] mi ara ad yeɣli usemmiṭ maca tinigt-a tettak-d affud meqqren i [[amyaraw|wemyaraw]]. Deg wakuden igejdanen n tinigt yettili-d uqaful n wermud n tinigt deg tallit [[Aɣelluy|uɣelluy]] alamma d tlemmast n [[iṭ|yiṭ]] neɣ ɣef 1 n tnezzayt, Deg [[tafrara|tefrara]] irennu-d wemdan n iminigen (iminigen n wass tikkelt-a)
 
 [[Tugna:BrantaLeucopsisMigration.jpg|thumb|300px|]]
 
