*Empty MediaWiki Message*

--- a/Brest.mw
+++ b/Brest.mw
@@ -1,6 +1,6 @@
 {{Infobox city}} 
 
-'''Brest''' d [[tamdint]] n [[Fransa]]. D tamaneɣt n agezdu (département) n [[Bouches-du-Rhône]]. Zedɣen-tt {{formatnum:139342}} n yimezdaɣen. 
+'''Brest''' d [[tamdint]] n [[Fransa]]. D tamaneɣt n agezdu (département) n [[Finistère]]. Zedɣen-tt {{formatnum:139342}} n yimezdaɣen. 
 
 {{commons|Brest}} 
 
