*Empty MediaWiki Message*

--- a/Johnny_Hallyday.mw
+++ b/Johnny_Hallyday.mw
@@ -1,1 +1,2 @@
-johnny hallyday d afenan
+[[Tugna:Johnny Hallyday NRJ Music Awards 2012.jpg|thumb|right|Johnny Hallyday, 2012.]] 
+Johnny Hallyday d afenan.
