--- a/Johnny_Hallyday.mw
+++ b/Johnny_Hallyday.mw
@@ -1,2 +1,4 @@
 [[Tugna:Johnny Hallyday NRJ Music Awards 2012.jpg|thumb|right|Johnny Hallyday, 2012.]] 
-Johnny Hallyday d afenan.
+Johnny Hallyday d afenan. 
+
+[[Taggayt:Fransa]]
