*Empty MediaWiki Message*

--- a/Johnny_Hallyday.mw
+++ b/Johnny_Hallyday.mw
@@ -1,4 +1,4 @@
-[[Tugna:Johnny Hallyday NRJ Music Awards 2012.jpg|thumb|right|Johnny Hallyday, 2012.]] 
-Johnny Hallyday d afenan. 
+{{Databox}}
+'''Johnny Hallyday''' yella d acennay arumi, ilul-d deg 15 yunyu 1943, yemmut ass n 6 dujember 2017.
 
 [[Taggayt:Fransa]]
