--- a/Aɣyul_n_wureɣ.mw
+++ b/Aɣyul_n_wureɣ.mw
@@ -2,7 +2,7 @@
 '''Aɣyul n wureɣ''' d yiwen n [[ungal]] i yura [[amyaru|umyaru]] amaziɣ [[Afulay]] (''Apuleius'') deg [[awines|uwines]] wis sin seld tlalit. Yettuneḥsab d ungal amezwaru maḍi yakk deg umezruy n talsa. Yura-t  s [[Talatint|tlatint]].
 
 === Agzul ===
-Ullis i d-yeddan deg-s yettales-d (iḥekku-d) ɣef yiwen n [[ilemẓiyen|ilemẓi]] iwumi qqaren ''Lusyus'' (d isem [[amyaru|uymaru]] s yiman-is) i yunagen ɣer tmurt Igrigiyen ɣef kra n ccɣel, yuɣ waddadl Lusyus-a d awnaf aṭas, ira (iḥemmel) ad yegzu u ad innekcem g kra yellan, akken i iteddu yettnadi armi yurem (yeɛreḍ) ad yekcem deg lumuṛ n ssḥur d wid i ten-ixeddmen, dɣa yessen-d yiwet n tmeṭṭut, d taqeddact n umdakel-is Milu uɣur yerza, tezdi-ten tayri kra n wussan deg uxxam-nni, akken armi d yiwwas teɛreḍ ad t-tɛiwen s ukerrer akken ad yuɣal d igider ;  maca i twenza tamcumt, yuɣal d [[aɣyul]], ihi din i d-bdan yingazen-is d icaliyen-is n leɛtab akked wid i d-yemlal gar imakaren, iqettalen, imeksawen, iɛebbaden n yilluten, imeṛkantiyen d wiyaḍ ; ayen ur nfukk armi t-terra tillut Izis (d tillut tamaṣrit)  ɣer ṣṣifa-s tanaṣlit n wemdan. Deg teqsiṭ, m’akken yella deg tfekka n uɣersiw bu-rebɛa iḍarren, allaɣ n Lusyus yeqqim d win n wemdan kan, daymi yessaweḍ ad d-yedlu ɣef ayen yeffren deg tmetti, cceṛ akk yettmaggan ideg ilaq ad yettekki tikwal netta s yiman-is,  yerna acḥal d abrid i yewweḍ ɣer yimi n lmut, s ẓẓher kan i imenneɛ. Ihi d tilufa iwumi yeḥḍer i d-yewwi deg wullis-is anda i d-yessexlaḍ tiqsiḍin d tmucuha iwumi isell daɣen ɣer wiyaḍ ssya ɣer da. Taxatart gar-asent d tin n Psici (Psyché) d Cupidu i d-iḍehren i tekelt tamezwarut deg udlis-a syin tuɣal terna ɣer tmitulugit taqburt. Aɣanib n umeskar yeččur d asaran  ; s kra la d-yettales, yettarra kulci ɣer yir ẓẓher i t-yeṭṭafaren anda yekka uqbel ad kfunt fell-as. Dɣa ɣer tagara yuɣal d axewni ameqqran ibedden i tillut i t-id-isellken si yir tumelt  i yesbur acḥal d ayyuren.
+Ullis i d-yeddan deg-s iḥekku-d ɣef yiwen n [[ilemẓiyen|ilemẓi]] iwumi qqaren ''Lusyus'' (d isem [[amyaru|uymaru]] s yiman-is) i yunagen ɣer tmurt Igrigiyen ɣef kra n ccɣel, yuɣ lḥal Lusyus-a d awnaf aṭas, ira (iḥemmel) ad yegzu u ad innekcem g kra yellan, akken i iteddu yettnadi armi yurem (yeɛreḍ) ad yekcem deg lumuṛ n ssḥur d wid i ten-ixeddmen, dɣa yessen-d yiwet n tmeṭṭut, d taqeddact n umdakel-is Milu uɣur yerza, tezdi-ten tayri kra n wussan deg uxxam-nni, akken armi d yiwwas teɛreḍ ad t-tɛiwen s ukerrer akken ad yuɣal d igider ;  maca i twenza tamcumt, yuɣal d [[aɣyul]], ihi din i d-bdan yingazen-is d icaliyen-is n leɛtab akked wid i d-yemlal gar imakaren, iqettalen, imeksawen, iɛebbaden n yilluten, imeṛkantiyen d wiyaḍ ; ayen ur nfukk armi t-terra tillut Izis (d tillut tamaṣrit)  ɣer ṣṣifa-s tanaṣlit n wemdan. Deg teqsiṭ, m’akken yella deg tfekka n uɣersiw bu-rebɛa iḍarren, allaɣ n Lusyus yeqqim d win n wemdan kan, daymi yessaweḍ ad d-yedlu ɣef ayen yeffren deg tmetti, cceṛ akk yettmaggan ideg ilaq ad yettekki tikwal netta s yiman-is,  yerna acḥal d abrid i yewweḍ ɣer yimi n lmut, s ẓẓher kan i imenneɛ. Ihi d tilufa iwumi yeḥḍer i d-yewwi deg wullis-is anda i d-yessexlaḍ tiqsiḍin d tmucuha iwumi isell daɣen ɣer wiyaḍ ssya ɣer da. Taxatart gar-asent d tin n Psici (Psyché) d Cupidu i d-iḍehren i tekelt tamezwarut deg udlis-a syin tuɣal terna ɣer tmitulugit taqburt. Aɣanib n umeskar yeččur d asaran  ; s kra la d-yettales, yettarra kulci ɣer yir ẓẓher i t-yeṭṭafaren anda yekka uqbel ad kfunt fell-as. Dɣa ɣer tagara yuɣal d axewni ameqqran ibedden i tillut i t-id-isellken si yir tumelt  i yesbur acḥal d ayyuren.
 
 
 
