*Empty MediaWiki Message*

--- a/Asaflu_arurad.mw
+++ b/Asaflu_arurad.mw
@@ -6,7 +6,8 @@ Am waṭas n telmas timeẓyanin n iylalen. Ula d asaflu arurad iga d iswi n kra
 
 
 == Aglam ==
-
+'''Tafekka''' <br/>
+Asaflu arurad d yiwen n weylal meẓẓiyen tafekka-ynes teččur, Awtem yuwzen 8,7 g más d tawtemt gar n 6 d 7 g. Amawaṭ n wadu-telmest n wanaw utrim '' P. c. collybita'' ila (yesɛa) imuren ifellayen (n ufella) igan d izegza d izurirɣen (ur qessiḥ ara) yakk d waras. Ma d imuren iddayen (n wadda) d imellalen yedda ar tewṛeɣ deg wafriwen. Iṭarren-is d ikacbaren-is berrik-it
 
 == Ẓeṛ daɣen ==
 
