--- a/Tameččit.mw
+++ b/Tameččit.mw
@@ -1,3 +1,3 @@
-[[Tugna:Tom%27s_Restaurant,_NYC.jpg|thumb|250px|]]
+[[Tugna:Tom%27s_Restaurant,_NYC.jpg|thumb|Tameččit]]
 
 '''Tameččit''' d ideg dgi id yettwafek [[učči]] d [[tissit]] i [[amsaɣ|yemsaɣen]] dɣa timeččitin ttilin-t s waṭas deg yirawen n [[abrid|iberdan]] i wakken imsebriden ad zemren ad beddeden w ad sgunfun
