*Empty MediaWiki Message*

--- a/Tokyo.mw
+++ b/Tokyo.mw
@@ -2,4 +2,5 @@
 
 Tamdint n '''Tokyo''' d tamanaɣt n tmurt n [[Japun]]. Isem-is yettwaru 東京, anamek-is d "Tamanaɣt n Wegmuḍ (tacerqit)" (tamanaɣt n zik tella d [[Kyoto]], yezgan deg utaram).
 
-[[Category:Timdinin]][[Category:Japon]]
+[[Taggayt:Tokyo| ]]
+[[Category:Timdinin]]
