*Empty MediaWiki Message*

--- a/Kobe.mw
+++ b/Kobe.mw
@@ -3,4 +3,5 @@
 '''Kobe''' d tamdint tameqrant tis sḍis (6) deg [[Japun]]. Tezga-d deg wenẓul n tegzirt n [[Honcu]]. Zedɣen-tt 1.533.852 n yimezdaɣen. 
 Deg 1995, twet-d tzenzelt tameqrant deg temdint n Kobe, tenɣa 6.434 n yemdanen, yerna tejja 212.443 n yemdanen nniḍen war tanezduɣt.
 
-[[Category:Japon]][[Category:Timdinin]][[Category:Kobe]]
+[[Category:Kobe| ]]
+[[Category:Timdinin]]
