--- a/Kobe.mw
+++ b/Kobe.mw
@@ -1,6 +1,6 @@
 {{Infobox city}}
 
-'''Kobe''' d tamdint tameqrant tis sḍis (6) deg [[Japun]]. Tezga-d deg wenẓul n tegzirt n [[Honcu]]. Zedɣen-tt 1.533.852 n yimezdaɣen. 
+'''Kobe''' d tamdint tameqrant tis sḍis (6) deg [[Yapan]]. Tezga-d deg wenẓul n tegzirt n [[Honcu]]. Zedɣen-tt 1.533.852 n yimezdaɣen. 
 Deg 1995, twet-d tzenzelt tameqrant deg temdint n Kobe, tenɣa 6.434 n yemdanen, yerna tejja 212.443 n yemdanen nniḍen war tanezduɣt.
 
 [[Category:Kobe| ]]
