--- a/Asaflu_arurad.mw
+++ b/Asaflu_arurad.mw
@@ -6,7 +6,7 @@ Am waṭas n telmas timeẓyanin n iylalen. Ula d asaflu arurad iga d iswi n kra
 
 
 == Aglam ==
-'''Tafekka''' <br/>
+=== Tafekka ===
 Asaflu arurad d yiwen n weylal meẓẓiyen tafekka-ynes teččur, Awtem yuwzen 8,7 g más d tawtemt gar n 6 d 7 g. Amawaṭ n wadu-telmest n wanaw utrim '' P. c. collybita'' ila (yesɛa) imuren ifellayen (n ufella) igan d izegza d izurirɣen (ur qessiḥ ara) yakk d waras. Ma d imuren iddayen (n wadda) d imellalen yedda ar tewṛeɣ deg wafriwen. Iṭarren-is d ikacbaren-is berrik-it
 
 <gallery mode="packed">
@@ -14,6 +14,10 @@ Tugna:Chiffchaff (Phylloscopus collybita).jpg|alt=Un Pouillot véloce vu de prof
 Tugna:Chiffchaff (Phylloscopus collybita) (6).jpg|alt=Un Pouillot véloce de face, posé sur une branche.|Amur adday n usaflu arurad.
 File:2017.05.17.-03-Kirschgartshaeuser Schlaege-Mannheim--Zilpzalp.jpg|alt=Un Pouillot véloce sur une tige regardant devant lui. |Asaflu arurad.
 </gallery>
+
+[[Tawtemt|Tiwermin]] mmirwasen-t (ttemcabin-t) d [[awtem|iwetmen]] deg tmeẓri n [[ini|yiniten]] maca meẓẓiy-it fell-asen. Ma d ifrax gan d arasen deg imuren ifellayen ugar n imawaṭen 
+
+=== Tilmas yettemcabin ===
 
 == Ẓeṛ daɣen ==
 
