--- a/Asaflu_arurad.mw
+++ b/Asaflu_arurad.mw
@@ -19,6 +19,28 @@ File:2017.05.17.-03-Kirschgartshaeuser Schlaege-Mannheim--Zilpzalp.jpg|alt=Un Po
 
 === Tilmas yettemcabin ===
 
+== Tikeli ==
+=== Asčewčew ===
+
+
+=== Tikeli tamurant ===
+
+
+=== Učči ===
+[[Tugna:Phylloscopus collybita 090907.jpg|thumb|alt=Pouillot véloce vu de profil, tourné vers la droite, posé sur une branche portant des baies noires.|Asaflu arurad tettunag ɣef wučči deg yakk tinnanin n tudert tamɣawt.]]
+
+Am yal talmest deg twacult-is, Aylal-a meẓẓiyen iga d [[Timesburɣas|amesburɣas]] anda yettwaf-d igerru (ileqqeḍ) [[aburɣas|iburɣas]] ([[Tasnefriwin]] ''(Diptera)'' s talɣa tagejdant) d ugar n 50 n twaculin n iden d kra n telmas n [[Tigri|tegritin]] akken iy tett Timellalin d tsekliwin n [[aferṭeṭṭu|iferṭeṭṭa]] 
+
+=== Amyaraw ===
+
+=== Iɣersiwen inegmaren ===
+
+== Ideggan n tudert ==
+
+== Tasartut d wesru ==
+
+== Imihiyen d taggaẓt ==
+
 == Ẓeṛ daɣen ==
 
 [[Taggayt:Iylalen]]
