--- a/Amenferriw_awraɣ.mw
+++ b/Amenferriw_awraɣ.mw
@@ -2,7 +2,9 @@
 '''Amenferriw awraɣ''' neɣ '''Turiɣt''' ('''[[Assaɣ ussnan]]''': ''Spinus spinus'', Zik nni: ''Carduelis spinus'') d yiwet n [[talmest|telmest]] n [[agṭiṭ|igṭaṭ]] igan d [[Tinigt n iylalen|iminig]] s talɣa tamurant. Aylal-a yeṭṭafar [[tawacult (tasnudert)|tawacult]] n [[Tibenferriwin|tbenferriwin]]
 
 == Aglam ==
+Amenferriw awraɣ iga d yiwen gar telmas meẓẓiyen yakk deg twacult n ibenferriwen anda ableɣ-is amnummsan 12 cm. Am ifrax am imawaṭen tifekkiwin-nsen d tid yeččuren. [[Afriw|Afriwen-nsen]] d iberkanen yakk d uzawag d awraɣ uddir (afessas) ma d tameccact neɣ tadfart d tawraɣt tezzegzu
 
+Amenferriw awraɣ d win yettemcabin ar
 
 == Ẓeṛ daɣen ==
 
