*Empty MediaWiki Message*

--- a/Tifinaɣ.mw
+++ b/Tifinaɣ.mw
@@ -9,7 +9,7 @@
 |sample=Prehistory-draa16.jpg
 |note=none
 }}
-
+[[File:ويكي عربية 2019 - ورشة تعلم حروف تيفيناغ.webm|thumb|Workshop f Tifinaɣ ɣ Meṛṛakec (s Taglizit).]]
 '''Tifinaɣ''', d [[agemmay]] nettaf ar [[imaziɣen]] s umata, ladɣa [[imucaɣ]] i t-iseqdacen ar wass-a. Agemmay-a ibeddel-d aṭaṣ n tikwal si zik ar ass-a; si wayen umi neqqar tira 'talibit' ar tifinaɣ amaynut.
 
 Qqaren d akken aẓar n wawal '''Tifinaɣ''' ikka-d si '''Tifi''' (tifin), d '''nneɣ'''. maca wiyaḍ qqaren, illa deg-s ccek, [[tamaziɣt]] n 2500 iseggasen aya, mačči am [[tcelḥit]] neɣ [[taqbaylit]] n tura.
