*Empty MediaWiki Message*

--- a/Amenferriw_awraɣ.mw
+++ b/Amenferriw_awraɣ.mw
@@ -4,7 +4,7 @@
 == Aglam ==
 Amenferriw awraɣ iga d yiwen gar telmas meẓẓiyen yakk deg twacult n ibenferriwen anda ableɣ-is amnummsan 12 cm. Am ifrax am imawaṭen tifekkiwin-nsen d tid yeččuren. [[Afriw|Afriwen-nsen]] d iberkanen yakk d uzawag d awraɣ uddir (afessas) ma d tameccact neɣ tadfart d tawraɣt tezzegzu
 
-Amenferriw awraɣ d win yettemcabin ar
+Amenferriw awraɣ d win yettemcabin ar [[Timezmleft|temzemleft]]
 
 == Ẓeṛ daɣen ==
 
