*Empty MediaWiki Message*

--- a/Amenferriw_awraɣ.mw
+++ b/Amenferriw_awraɣ.mw
@@ -6,6 +6,22 @@ Amenferriw awraɣ iga d yiwen gar telmas meẓẓiyen yakk deg twacult n ibenfer
 
 Amenferriw awraɣ d win yettemcabin ar [[Timezmleft|temzemleft]]
 
+=== Timeẓrit n uwtem ===
+Awtem ila (yesɛa) tacacit d tamart d iberkanen. Timmiwin n deffir d tiwraɣin ma d imuyag-is d izegza
+
+=== Timeẓrit n tewtemt ===
+Tawtemt ur tli ara (ur tesɛi ara) tacacit berriken. Yerna ur tella ara d taberbact am uwtem
+
+=== Timeẓrit n wefrux ===
+
+== Asčewčew d usiɣi ==
+
+== Tikeli ==
+
+== Ideggan n tudert ==
+
+== Učči ==
+
 == Ẓeṛ daɣen ==
 
 [[Taggayt:iɣersiwen]]
