--- a/Akujil.mw
+++ b/Akujil.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Akujil''' ([[isem usnan]]: ''Otus scops'') d [[aylal]] yeṭṭafaren tawacult tasnudert tawacult n [[tawukt tadettant]] deg [[Tafesna (tasnudert)|tfesna]] n [[tiwukin|twukin]].
+'''Akujil''' ('''[[Assaɣ ussnan]]''': ''Otus scops'') d [[aylal]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tawukt tadettant]] deg [[Tafesna (tasnudert)|tfesna]] n [[tiwukin|twukin]].
 
 
 [[Category:aɣersiw]]
