*Empty MediaWiki Message*

--- a/Akujil.mw
+++ b/Akujil.mw
@@ -2,6 +2,6 @@
 '''Akujil''' ('''[[Assaɣ ussnan]]''': ''Otus scops'') d [[aylal]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tawukt tadettant]] deg [[Tafesna (tasnudert)|tfesna]] n [[tiwukin|twukin]].
 
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwem]]
 [[Category:Iylalen]]
 [[Category:Tiwukin]]
