*Empty MediaWiki Message*

--- a/Aydi_n_waman.mw
+++ b/Aydi_n_waman.mw
@@ -14,3 +14,6 @@ Aṭas n telmas n idan n waman ttidiren deg waman isemmaṭen
 == Ẓeṛ daɣen ==
 
 [[Category:iɣersiwen]]
+[[Taggayt:Timseksumin]]
+[[Taggayt:Timsuṭad]]
+[[Taggayt:Iɣersiwen n tmurt n Iqbayliyen]]
