*Empty MediaWiki Message*

--- a/Ibki.mw
+++ b/Ibki.mw
@@ -2,4 +2,4 @@
 
 '''ibki''' ([[asget]]: ''ibka'') neɣ '''Iddew''' ([[asget]]: ''iddawen'') , d aɣersiw asuṭṭaḍ yettcabin amdan deg kra n [[aglam|yeglamen]] (ṣṣifat) n [[tafekka|tfekka-ynes]] ([[udem]], [[afus|ifassen]]...) akked d kra deg tegzi-ynes. Amur ameqran seg yiddawen neɣ yebka tteddren sufella n [[aseklu|yisekla]] (ttjuṛ), maca kra seg-sen (am [[Ababun|ubabun]], acimpanzi ed uguri) tteddren ɣef [[tagnit|tegnit]] (lqaɛa). S umata, akk iddawen ttetten [[imɣan]], afriwen ed y[[igumma]] (lfakya), maca llan wid ay izemren ad ččen tiɣawsiwin niḍen, am [[aksum|weksum]] d yibeɛɛac.
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
