*Empty MediaWiki Message*

--- a/Ikidni.mw
+++ b/Ikidni.mw
@@ -1,3 +1,3 @@
-'''Ikidni''' (asget: ikidniyen) d [[aɣersiw]] [[asuṭṭaḍ]] yettarwen timellalin, yedder deg [[Ustralya]] ed [[Ginya Tamaynut]]. Tafekka-nnes dlen-tt yisennanen, yesɛa aqamum d aquran, yeɣɣaz imerjan yerna ittett ibeɛɛac. Ikidni seg terbaɛt n yiɣersiwen umi ɣɣaren imunutrimen. Yezmer ad yaweḍ 25 n yisantimitren deg teɣzef.
+'''Ikidni''' (asget: ikidniyen) d [[aɣersiw]] [[Timsuṭad|asuṭṭaḍ]] yettarwen timellalin, yedder deg [[Ustralya]] ed [[Ginya Tamaynut]]. Tafekka-nnes dlen-tt yisennanen, yesɛa aqamum d aquran, yeɣɣaz imerjan yerna ittett ibeɛɛac. Ikidni seg terbaɛt n yiɣersiwen umi ɣɣaren imunutrimen. Yezmer ad yaweḍ 25 n yisantimitren deg teɣzef.
 
 [[Category:Aɣersiw]]
