*Empty MediaWiki Message*

--- a/Izermummuyen.mw
+++ b/Izermummuyen.mw
@@ -11,7 +11,7 @@
 {{extinct}}[[Ornithomimidae]]
 | synonyms =*Arctometatarsalia <small>[[Thomas R. Holtz, Jr.|Holtz]], 1994</small>}}
 
-'''Izermummuyen''' ([[isem usnan]]: ''Sauria'') d [[Afelfesna]] n [[timraradin|temraradin]] yeṭṭafaren [[adu-smil]] n [[tinefrawin|tnefrawin]] deg [[asmil (tasnudert)|wesmil]] n [[Tizunmraradin|tzunmraradin]]
+'''Izermummuyen''' ('''[[Assaɣ ussnan]]''': ''Sauria'') d [[Afelfesna]] n [[timraradin|temraradin]] yeṭṭafaren [[adu-smil]] n [[tinefrawin|tnefrawin]] deg [[asmil (tasnudert)|wesmil]] n [[Tizunmraradin|tzunmraradin]]
 
 == Tasartut d usismel ==
 * [[Tizutar]]
