*Empty MediaWiki Message*

--- a/Imerwel.mw
+++ b/Imerwel.mw
@@ -8,4 +8,4 @@ Imerwel d awtul yettidiren deg [[Tafriqt|Tefriqt]] alamma d [[Lhend]]
 == Ẓeṛ daɣen ==
 * [[Awtul]]
 
-[[category:aɣersiw]]
+[[category:iɣersiwen]]
