*Empty MediaWiki Message*

--- a/Imerwel.mw
+++ b/Imerwel.mw
@@ -9,3 +9,6 @@ Imerwel d awtul yettidiren deg [[Tafriqt|Tefriqt]] alamma d [[Lhend]]
 * [[Awtul]]
 
 [[category:iɣersiwen]]
+[[Taggayt:Tiwetlɣatin]]
+[[Taggayt:Timsuṭad]]
+[[Taggayt:Timestuga]]
