*Empty MediaWiki Message*

--- a/Imerwel.mw
+++ b/Imerwel.mw
@@ -9,6 +9,7 @@ Imerwel d awtul yettidiren deg [[Tafriqt|Tefriqt]] alamma d [[Lhend]]
 * [[Awtul]]
 
 [[category:iɣersiwen]]
+[[Taggayt:Igtal]]
 [[Taggayt:Tiwetlɣatin]]
 [[Taggayt:Timsuṭad]]
 [[Taggayt:Timestuga]]
