*Empty MediaWiki Message*

--- a/Tinaɣlalin.mw
+++ b/Tinaɣlalin.mw
@@ -1,4 +1,4 @@
 {{Automatic taxobox}}
-'''Timtegzitin''' ('''[[Assaɣ ussnann]]''': ''Vertebrata'') d [[adu-wadur]] n [[aɣersiw|iɣersiwen]] ilan [[agju n uzagur]] d [[amelɣiɣ|umelɣiɣ]], Dges azal ameqran n [[timzikrin|temzikrin]] neɣ 640000 n telmas yettwagelmen,
+'''Timtegzitin''' ('''[[Assaɣ ussnan]]''': ''Vertebrata'') d [[adu-wadur]] n [[aɣersiw|iɣersiwen]] ilan [[agju n uzagur]] d [[amelɣiɣ|umelɣiɣ]], Dges azal ameqran n [[timzikrin|temzikrin]] neɣ 640000 n telmas yettwagelmen,
 
 [[Category:aɣersiw]]
