--- a/Aɣeṛda_n_tregwa.mw
+++ b/Aɣeṛda_n_tregwa.mw
@@ -1,6 +1,13 @@
 {{Automatic taxobox}}
 Aɣeṛda n tregwa ('''[[Assaɣ ussnan]]''': ''Microtus arvalis'') yettwasemma daɣen '''Takelmast n yigran''' d [[talmest]] meẓẓiyen n [[timseɣẓaẓ|temseɣẓaẓ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[timaklasin|tmaklasin]] d [[tawsit (tudersent)|tewsit]] n [[talekmast|tlekmast]], [[Aɣersiw|Aɣersiw-a]] yettili s tuget deg [[alma|yilmayen]] yeldin yerna tiɣerfin-is zemren-t ad ilint s tuget neɣ s tdrest
 
+== Aglam ==
+
+[[Tugna:Microtus arvalis lenghts.JPG|thumb|left|Teɣzi n usallaf n uɣeṛda n tregwa meẓẓiy s waṭas ɣef usallaf n [[aɣeṛda|uɣeṛda wexxam]]]]
+[[Tugna:Microtus arvalis hand.jpg|thumb|Aɣeṛda n tregwa deg uraw n ufus]]
+
+Tafekka n uɣeṛda n tregwa d tin yeččuren yerna tga d tamezzayt (tamdewwrant). Adfar-is gezzil maca yegda tiddi n tfekka-as, Mi ara ad yili d amawaṭ teɣzi ynes tettili gar n 9 ar 13 cm ma d asallaf-is seg 3 ar 4,5 cm. [[Azuk|Azuk-is]] seg 18 ar 50 g
+
 == Ẓeṛ daɣen ==
 
 [[Category:iɣersiwen]]
