*Empty MediaWiki Message*

--- a/Aɣeṛda_n_tregwa.mw
+++ b/Aɣeṛda_n_tregwa.mw
@@ -8,7 +8,15 @@ Aɣeṛda n tregwa ('''[[Assaɣ ussnan]]''': ''Microtus arvalis'') yettwasemma d
 
 Tafekka n uɣeṛda n tregwa d tin yeččuren yerna tga d tamezzayt (tamdewwrant). Adfar-is gezzil maca yegda tiddi n tfekka-as, Mi ara ad yili d amawaṭ teɣzi ynes tettili gar n 9 ar 13 cm ma d asallaf-is seg 3 ar 4,5 cm. [[Azuk|Azuk-is]] seg 18 ar 50 g
 
+== Amyaraw ==
+
+== Tamezduɣt ==
+
+== Tamhazt n telmest ==
+
 == Ẓeṛ daɣen ==
+
+
 
 [[Category:iɣersiwen]]
 [[Category:timseɣẓaẓ]]
