*Empty MediaWiki Message*

--- a/Aɣeṛda_n_tregwa.mw
+++ b/Aɣeṛda_n_tregwa.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-Aɣeṛda n tregwa ('''[[Assaɣ ussnan]]''': ''Microtus arvalis'') yettwasemma daɣen '''Takelmast n yigran''' d [[talmest]] meẓẓiyen n [[timseɣẓaẓ|temseɣẓaẓ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[timaklasin|tmaklasin]] d [[tawsit (tudersent)|tewsit]] n [[talekmast|tlekmast]], [[Aɣersiw|Aɣersiw-a]] yettili s tuget deg [[alma|yilmayen]] yeldin yerna tiɣerfin-is zemren-t ad ilint s tuget neɣ s tdrest
+'''Aɣeṛda n tregwa''' ('''[[Assaɣ ussnan]]''': ''Microtus arvalis'') yettwasemma daɣen '''Takelmast n yigran''' d [[talmest]] meẓẓiyen n [[timseɣẓaẓ|temseɣẓaẓ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[timaklasin|tmaklasin]] d [[tawsit (tudersent)|tewsit]] n [[talekmast|tlekmast]], [[Aɣersiw|Aɣersiw-a]] yettili s tuget deg [[alma|yilmayen]] yeldin yerna tiɣerfin-is zemren-t ad ilint s tuget neɣ s tdrest
 
 == Aglam ==
 
