--- a/Asaflaw.mw
+++ b/Asaflaw.mw
@@ -10,6 +10,14 @@ Sylvia atricappila vogelartinfo chris romeiks R7F4015.jpg|Tawtemt n usaflaw
 Jeune fauvette à tête noire 05.jpg|Aknuz (Afrux)
 </gallery>
 
+== Tikeli ==
+
+=== Amyaraw ===
+
+== Tamezduɣt ==
+
+== Asčewčew d usiɣi ==
+
 == Učči ==
 Deg tsemhuyt n umyaraw, Asaflaw itett [[aburɣas|iburɣas]] ma deg [[anebdu|unebdu]] (seg Yulyu) iy tett igumma yakk d [[ifes|ifsan]] i wakken ad tallen (ad tɛawnen) deg inig-is deg taggara n [[amwan|umwan]]
 
