*Empty MediaWiki Message*

--- a/Tinigt_n_yigṭaṭ.mw
+++ b/Tinigt_n_yigṭaṭ.mw
@@ -4,6 +4,6 @@
 
 Aṭas n tumanin ssetrern-t asseknu n tezrawt n tinigt-a. Yakk imanayen erran tamawt i wsemdu n [[Asmeskel anezway|usmeskel anezway]] ɣef [[Asezdeɣ|ussezdeɣ]] yettnernin i kra n telmas am [[Asaflaw|usaflaw]] d [[Asaflu arurad|usaflu arurad]] 
 
-
+Tinigt n kra n telmas am [[aswu|weswu]] d [[Tamilla|tmilla]] d [[tifirellas|tfirellas]] d tin yettusemlin send n 3000 n iseggasen sɣur imeskaren n [[Agrik amzik|igrikiyen imziken]] am [[Homer]] d [[Aristot]] akken daɣen iy tettusemli deg [[Adlis n Yub|wedlis n Yub]] 
 
 [[Taggayt:tinigt n iɣersiwen]]
