Replacing Gray1195.png with [[File:Structure_of_Adam's_apple.png]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR2|Criterion 2]] (meaningless or ambiguous name)).

--- a/Tamart.mw
+++ b/Tamart.mw
@@ -1,4 +1,4 @@
-[[Tugna:Gray1195.png|thumb|250px|Tamart d wayen id s-yezzin]]
+[[Tugna:Structure of Adam's apple.png|thumb|250px|Tamart d wayen id s-yezzin]]
 
 '''Tamart''' d tama taddayt (yellan deg wadda) n [[udem]] s ddaw n [[acenfir|ucenfir]], Dges id yettemɣay [[acamar|ucamar]]
 
