*Empty MediaWiki Message*

--- a/Tarjentint.mw
+++ b/Tarjentint.mw
@@ -1,5 +1,5 @@
 {{Infobox country}}
-
+[[File:ViñedoCafayate.jpg|thumb|left]]
 '''Tarjentint''' (isem unṣib : '''Tagduda n Terjentint'''), s tespanyulit : ''Republica de Argentina'' [reˈpuβlika aɾxenˈtina]) d tamurt tameqrant ay d-yezgan deg wenẓul n [[Tamrikt n Wenẓul|Temrikt n Wenẓul]]. Tajumma-nnes 2,780,400 km2. Zedɣen-tt 40,677,348 n yimezdaɣen (''Arjentinen'').
 
 ==Tarakalt==
