*Empty MediaWiki Message*

--- a/Tin_Iggi_(Ameṛṛuk).mw
+++ b/Tin_Iggi_(Ameṛṛuk).mw
@@ -1,2 +1,2 @@
 {{Infobox city}}
-Tin Iggi neɣ Tingi (s [[Taɛṛabt|taɛrabt]] : ''Ṭanja'', s [[tafransist]] : ''Tanger'') d tamdint n ugafa n [[Merruk|Ume]]ṛṛ[[Merruk|uk]] deg [[Arrif]].
+Tin Iggi neɣ Tingi neɣ ⵟⴰⵏⵊⴰ (s [[Taɛṛabt|taɛrabt]] : ''Ṭanja'', s [[tafransist]] : ''Tanger'') d tamdint n ugafa n [[Merruk|Ume]]ṛṛ[[Merruk|uk]] deg [[Arrif]].
