--- a/At_Ǧeɛfer.mw
+++ b/At_Ǧeɛfer.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''At Ǧaɛfer''' d yiwet taɣiwant n [[Tamurt Iqbayliyen|Tmurt Leqbayel]] deg twilayt n [[Burǧ Bu Ɛririǧ]], di tdayra n At Ǧaɛfer. Deg [[2008]], zedɣen-tt azal n 7998 imezdaɣ. 
+'''At Ǧaɛfer''' d yiwet taɣiwant n [[Tmurt Leqbayel|Tamurt Iqbayliyen]] deg twilayt n [[Burǧ Bu Ɛririǧ]], di tdayra n At Ǧaɛfer. Deg [[2008]], zedɣen-tt azal n 7998 imezdaɣ.
 
 ==Tarakalt==
 
