*Empty MediaWiki Message*

--- a/Awamɣil.mw
+++ b/Awamɣil.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Awamɣil''' neɣ '''Azara''' ([[Assaɣ usnan]]: ''Rhinocerotidae'') d [[tawacult (tasnudert)|tawacult]] meqqren n [[aɣersiw|iɣersiwen]] yettidiren deg [[Tafriqt|Tefriqt]] d [[Asya]], Dɣa aɣersiw-a d [[talmest]] yettwaggzen s [[angar|wengar]] ɣef tmentilt n [[agmar (armud)|wegmar]] i tukksa n yicc-is yettusxedmen deg tesnujya  
+'''Awamɣil''' neɣ '''Azara''' ('''[[Assaɣ usnan]]''': ''Rhinocerotidae'') d [[tawacult (tasnudert)|tawacult]] meqqren n [[aɣersiw|iɣersiwen]] yettidiren deg [[Tafriqt|Tefriqt]] d [[Asya]], Dɣa aɣersiw-a d [[talmest]] yettwaggzen s [[angar|wengar]] s usrag (ɣef ssebba) n [[agmar|wegmar]] id t-yeṭṭafaren i tukksa n [[icc|yicc-is]] yettusxedmen deg tesnujya aladɣa deg tmurt n [[Ccinwa]]
 
 == Tilmas ==
 
