*Empty MediaWiki Message*

--- a/Ijider_awraɣ.mw
+++ b/Ijider_awraɣ.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
+[[File:Aquila chrysaetos MHNT.ZOO.2010.11.88.3.jpg|thumb| ''Aquila chrysaetos'']]
 '''Ijider awraɣ''' ([[Assaɣ usnan]]: ''Aquila chrysaetos'') d [[tisekliwin|asekliw]] yettwassenen yakk deg wezgen n umadal agafaw, akken iga daɣen d [[talmest]] meqqren yakk deg [[ijider|ijudar]], yeṭṭafar [[tawacult (tasnudert)|tawacult]] n [[iberniyen]] am telmas n iden deg [[tawsit (tudersent)|tewsit-is]], Zik nni yella yezdeɣ yakk deg yidgan n ugafa n [[tagnit|tegnit]] maca tura [[angar|inger]] deg waṭas n yidgan igra-d kan deg [[iger|igran]] d [[tagant|tẓegwa]] yaggugen (ibeɛden) ɣef yidgan ittwazdaɣen d [[afgan|ifganen]] ɣas yella-d wannecg-a maca mazal-it yettidir deg waṭas n yidgan seg [[Asya]] ar [[Turuft|Uruppa]] d [[Tafriqt|Tefriqt]] d [[Tamrikt n Ugafa]] aladɣa di [[Kalifurnya]] 
 
 == [[Tagemra|Agmar]] ==
