*Empty MediaWiki Message*

--- a/Isiwan.mw
+++ b/Isiwan.mw
@@ -1,5 +1,5 @@
 {{Infobox city}}
-'''Isiwan''' ([[taɛrabt]] : ''واحة سيوة Wāḥat Sīwah'') d yiwen wemda (oasis) di tmurt n [[Maṣer]] i imezdaɣen-is d imaziɣen i yettmeslayen s [[Tasiwit]]. 
+'''Isiwan''' ([[taɛrabt]] : ''واحة سيوة Wāḥat Sīwah'') d yiwen [[amda|wemda]]  di tmurt n [[Maṣer|Miẓra]] i imezdaɣen-is d [[imaziɣen]] yettmeslayen s [[Tasiwit]]. 
 [[File:Siwaoasis.JPG|right|200px|thumb|Amda n Isiwan]]
 
 ==Tarakalt==
