*Empty MediaWiki Message*

--- a/Tasekla_tamezdayt.mw
+++ b/Tasekla_tamezdayt.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
+[[File:Buteo buteo MHNT.ZOO.2010.11.89.1.jpg|thumb| ''Buteo buteo'']]
 '''Tasekla tamezdayt''' ([[Assaɣ usnan]]: ''Buteo Buteo'') d [[aylal asekliw]] yettidiren deg yidgan ildin d [[aseklu|isekla]] ur neflal ara (ur ɛlay ara) s waṭas, Tasekla tamezdayt d [[Agaǧǧi n iylalen|inebgi d amezray]] yettgaǧǧi-d ar [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] deg [[tagrest|tegrest]]
 
 == Učči == 
