*Empty MediaWiki Message*

--- a/Tatoeba.mw
+++ b/Tatoeba.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Tatoeba''' d [[asmel]] [[web]] yebnan ɣef twizi, yessumur-d yiwen uzadur isefka n tefyar yettusuqlen ɣer yakk tutlayin, s turagt tilellit. Isem usenfaṛ-a yusa-d si tajapunit "tatoeba" (例えば　tatoeba), anamek-is s teqbaylit : "d amedya". Tatoeba ixulef imawalen nniḍen yellan ɣef tnelli seg akken netta yelha-d d usuqel n tefyar ikemlen. Asenfaṛ-is yebda-t-i [[Trang Ho]] di 2006, maca si 2009 d Allan Simon i yuɣalen d anemhal-is.
+'''Tatoeba''' d [[asmel]] [[web]] yebnan ɣef twizi, yessumur-d yiwen uzadur isefka n tefyar yettusuqlen ɣer yakk tutlayin, s turagt tilellit. Isem usenfaṛ-a yusa-d si tajapunit "tatoeba" (例えば　tatoeba), anamek-is s teqbaylit : "d amedya". Tatoeba ixulef imawalen nniḍen yellan ɣef tnelli seg akken netta yelha-d d usuqel n tefyar ikemlen. Asenfaṛ-is tebda-t-i [[Trang Ho]] di 2006, maca si 2009 d Allan Simon i yuɣalen d anemhal-is.
 
 Di wember 2017, Tatoeba yessaweḍ ɣer 6 000 000 n tefyar iferqen ɣef wazal n 320 n tutlayin. [[Taqbaylit]] tekcem deg-s di yulyu 2018.
 
