*Empty MediaWiki Message*

--- a/Timraradin.mw
+++ b/Timraradin.mw
@@ -10,7 +10,7 @@
 Ar tura llan-t anagar 4 n [[Tafesna|tfesna]]: 
 * [[Tizutar]] (''Crocodilia'') deg-sent azal n 23 n [[Talmest|telmas]]
 * [[Tiqerɣenbubin]] (''Rhynchocephalia'') deg-sent snat n [[Talmest|telmas]] 
-* [[Timeskebrin]] (''Squamata'') deg-sent azal n 7900 n [[Talmest|telmas]] gar-asent [[izerman]]
+* [[Timeskebrin]] (''Squamata'') deg-sent azal n 7900 n [[Talmest|telmas]] gar-asent [[azrem|izerman]]
 * [[Ifker|Tifekrin]] (''Testudines''), Deg-sent azal n 300 n telmas
 
 == Tilmas n temraradin ==
