*Empty MediaWiki Message*

--- a/Tasedsut_n_yebrir.mw
+++ b/Tasedsut_n_yebrir.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Tasedsut n yebrir''' d talemmiẓt tamensayt deg waṭas n tmura, Talemmiẓt-a tettas-d deg [[1 Yebrir|wass amenzu n wayyur n Yebrir]] deg yall aseggas yettwassen s wexdam ukellex d uskerkes ɣef medden, Tasedsut n yebrir ur yelli ara d ass n umuras amaddud (unṣib) neɣ d ass n usfuggel amaddud, maca iga d ass dgi ttattan (ttaḍsen) w ttkellixen medden ɣef wiyyad
 
 Asfuggel-a yettilid deg wamur ameqran n [[aɣref|iɣerfen]] s wemgarad n yiniten-nsen d [[idles|yidlsen-nsen]]. Amur ameqran n [[Anagmay|inagmayen]] qqaren-d d akken talemmiẓt-a ttuɣalen iẓuran-is ar [[Turuft]] iy bedden ɣef uqejjem (tiqeṣṣert) d ukellex d tikerkas. Dɣa wid yettamnen yakk tikerkas nni qqaren-as ''taɣtest n tsedsuyt n yebrir''
