*Empty MediaWiki Message*

--- a/Tasedsut_n_yebrir.mw
+++ b/Tasedsut_n_yebrir.mw
@@ -6,3 +6,7 @@ Asfuggel-a yettilid deg wamur ameqran n [[aɣref|iɣerfen]] s wemgarad n yiniten
 == Aẓaṛ ==
 
 == Ẓeṛ daɣen ==
+
+[[Taggayt:Tifaskiwin]]
+[[Taggayt:Tifaskiwin tidelsanin]]
+[[Taggayt: Tilemmiẓin n yebrir]]
