--- a/Tafsut_n_Yimaziɣen.mw
+++ b/Tafsut_n_Yimaziɣen.mw
@@ -446,3 +446,5 @@ Amezruy n Tefsut n Yimaziɣen yessuqqel-it-id [[Omar MOUFFOK]] - Tiddukla Tadels
 * '''Imazighen ass-a''', n Salem Caker (tiẓrigin Bouchène, Lezzayer, 1990).
 
 [[Taggayt:Amezruy]]
+[[Taggayt:Tifaskiwin]]
+[[Taggayt:Tifaskiwin tidelsanin]]
