--- a/Talalit_(Nuwel).mw
+++ b/Talalit_(Nuwel).mw
@@ -1,3 +1,3 @@
 {{Databox}}
 
-'''Talalit''' neɣ '''Amasilul''' d [[tagaska]] tis snat ilan azal yakk deg [[Tamasiḥit|tmasiḥt]] seld n [[Tanekra (tagaska)|tnekra]] id yesskanayen asmekti n [[talallit n Yissu|tlallit n Yisus]], Tafaska ayyi tebeddu deg yiṭ n [[24 dujember]] d wass n [[25 dujember]] deg [[Taswast tagrigurt|teswast tagrigurt]] d [[taswast tayulyant|teswast tayulyant]] maca s usrag n umgarad n snat n teswasin-a s 13 n wussan tettili-d tfaska n tlalit deg [[tamezdayt (Asɣan)|tmezdayin]] yeṭṭafaren taswast tayulyant deg yiṭ n [[6 Yennayer]] d wass n [[7 Yennayer]] ɣas akken [[Tibibelt|ibibel]] ur d-ibdir ara ass neɣ azmez n tlallit n [[Ɛisa|Yissu]] maca [[ibabaten n tmezdayt]] ssidgen-d azmez-a d akken-t d asihar-is (ttiɛad-is) seg useggas n [[325]]
+'''Talalit''' neɣ '''Amasilul''' d [[tagaska]] tis snat ilan azal yakk deg [[Tamasiḥit|tmasiḥt]] seld n [[Tanekra (tagaska)|tnekra]] id yesskanayen asmekti n [[talallit n Yissu|tlallit n Yisus]], Tafaska ayyi tebeddu deg yiṭ n [[24 dujamber|24 dujember]] d wass n [[25 dujamber|25 dujember]] deg [[Taswast tagrigurt|teswast tagrigurt]] d [[taswast tayulyant|teswast tayulyant]] maca s usrag n umgarad n snat n teswasin-a s 13 n wussan tettili-d tfaska n tlalit deg [[tamezdayt (Asɣan)|tmezdayin]] yeṭṭafaren taswast tayulyant deg yiṭ n [[6 Yennayer]] d wass n [[7 Yennayer]] ɣas akken [[Tibibelt|ibibel]] ur d-ibdir ara ass neɣ azmez n tlallit n [[Ɛisa|Yissu]] maca [[ibabaten n tmezdayt]] ssidgen-d azmez-a d akken-t d asihar-is (ttiɛad-is) seg useggas n [[325]]
