*Empty MediaWiki Message*

--- a/Ṣaleḥ_Aḥmed_Gayed.mw
+++ b/Ṣaleḥ_Aḥmed_Gayed.mw
@@ -1,5 +1,5 @@
 {{Infobox biography}}
-'''Saleḥ Aḥmed Gayed''' (mechur s yisem '''Gayed Saleḥ''') ilul deg 13 yennayer 1940 g [[batna]] - 23 dujamber 2019, d ajiniral [[ledzayer|adzayri]] i iḥekmen akk lɛesker seg 2004.
+'''Saleḥ Aḥmed Gayed''' (mechur s yisem '''Gayed Saleḥ''') ilul deg 13 yennayer 1940 g [[batna]] - 23 dujamber 2019, d ajiniral [[ledzayer|adzayri]] i iḥekmen akk lɛesker seg 2004-2019.
 
 Yuɣal d ajiniral g 1993, tura netta ajiniral n ''corps d'armée''.
 
