*Empty MediaWiki Message*

--- a/Awerta_yegran.mw
+++ b/Awerta_yegran.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Awerta yegran''' ([[Assaɣ ussnan]]: '':Mustela putorius'') d [[talmest]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tidɣaɣatin|tedɣaɣatin]] dges aṭas n [[adu-telmest|idulmsen]] sin deg-sen ttwassenen s waṭas, yiwen d [[Agrad|amegrud]] ([[Anessas]]) wis sin zeddiɣ (mazal) yettidir s azɣar d [[tagant|tẓegwa]] ([[awerta]]) 
+'''Awerta yegran''' neɣ '''Asebseb''' ([[Assaɣ ussnan]]: '':Mustela putorius'') d [[talmest]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tidɣaɣatin|tedɣaɣatin]] dges aṭas n [[adu-telmest|idulmsen]] sin deg-sen ttwassenen s waṭas, yiwen d [[Agrad|amegrud]] ([[Anessas]]) wis sin zeddiɣ (mazal) yettidir s azɣar d [[tagant|tẓegwa]] ([[awerta]])
 
 == [[Adu-telmest|Idulmas]] n tlmest-a ==
 Llan waṭas n [[adu-telmest|idulmas]] yeṭṭafaren talmest n uwerta n yegran: 
