*Empty MediaWiki Message*

--- a/Ugel.mw
+++ b/Ugel.mw
@@ -1,5 +1,8 @@
 [[Tugna:Azawakh K9.jpg|thumb|250px|Uglan n weydi]]
 
-'''Ugel''' (Asget: '''Uglan''') d [[tuɣmest|tuɣmas]] imeslen id yezgan gar n [[tissirt (tuɣmest)|tissirt]] d [[ifeɣmes]]
-Uglan ttwasxdemen sɣuṛ [[Tawwa|tiwwa]] (iɣersiwen itetten aksum) i tukksa d wegzam n [[aksum|weksum]]  am [[amcic|imcac]] d [[izem|yezmawen]]
+'''Ugel''' (Asget: '''Uglan''') d [[tuɣmest|tuɣmas]] imesden id yezgan gar n [[tissirt (tuɣmest)|tissirt]] d [[ifeɣmes]]
+Uglan ttwasxdemen sɣuṛ [[timseksumin|tiwwa]] (iɣersiwen itetten aksum) i tukksa d wegzam n [[aksum|weksum]]  am [[amcic|imcac]] d [[izem|yezmawen]]
 Deg [[imi|yimi]] n [[afgan|ufgan]] llan-t 4 n wuglan, snat deg ufella, Snat deg wadda
+
+== Ẓeṛ daɣen ==
+[[Taggayt:tuɣmast]]
