*Empty MediaWiki Message*

--- a/Tissirt_(tuɣmest).mw
+++ b/Tissirt_(tuɣmest).mw
@@ -4,3 +4,6 @@
 Deg [[afgan|ufgan]] amagur (argaz issawṭen deg [[addar|waddar]] llan-t azal n 12 n tsirin ẓunen-t (ferqen-t) af 4 n tegrawin, deg yal tagrawt llan-t 3 n tsirin tis kuẓ (tis 4) d [[tuɣmest n ugerru]]
 
 == Tilmas n tuɣmas ==
+
+== Ẓeṛ daɣen ==
+[[Taggayt:Tuɣmas]]
