*Empty MediaWiki Message*

--- a/Tissirt_(tuɣmest).mw
+++ b/Tissirt_(tuɣmest).mw
@@ -1,6 +1,6 @@
 [[Tugna:Lower_wisdom_tooth.jpg|thumb|250px|Tissirt]]
 
-'''Tissirt''' d [[tuɣmest]] id yezgan seg tama tamendeffirt n [[aɣesmaṛ|uɣesmaṛ]] yettwasxedm deg [[tuẓda]] n [[učči|wučči]] sɣur [[afgan|ufgan]] d kra n [[Talmest|telmas]] n [[Aɣersiw|iɣersiwen]] neɣ [[timesiffatin]]
+'''Tissirt''' d [[tuɣmest]] id yezgan seg tama tamendeffirt n [[aɣesmaṛ|uɣesmaṛ]] yettwasxedm deg [[tuẓda]] n [[učči|wučči]] sɣur [[afgan|ufgan]] d kra n [[Talmest|telmas]] n [[Aɣersiw|iɣersiwen]] neɣ [[timsuṭad]]
 Deg [[afgan|ufgan]] amagur (argaz issawṭen deg [[addar|waddar]] llan-t azal n 12 n tsirin ẓunen-t (ferqen-t) af 4 n tegrawin, deg yal tagrawt llan-t 3 n tsirin tis kuẓ (tis 4) d [[tuɣmest n ugerru]]
 
 == Tilmas n tuɣmas ==
