--- a/Suduku.mw
+++ b/Suduku.mw
@@ -3,9 +3,9 @@
 Iswi n wurar d taččart n yemkuẓen neɣ n texxamin s wuṭṭunen (tikwal ttekkin ula d isekkilen d yizamulen, acku yemgarad seg suduku ɣer wayeḍ), maca ur ilaq ara ad d-ɣlin sin n wuṭṭunen (isekkilen, izamulen) kifkif deg yiwen n ujerrid, ajgu neɣ iḥder (aḥric neɣ agraw n texxamin).<br>
 Suduku i nuɣ tannumi netturar-it yettas-d yesɛa 3x3 n yiḥedran (iḥricen neɣ igrawen n texxamin), yal iḥder ɣur-s 3x3 n texxamin i nettaččar s wuṭṭunen seg 1 ɣer 9. Kra n texxamin ttasent-d ččurent yakan, s yes-sent i nezmer ad d-naf s wacu ara neččar tiyaḍ.
 
-===Aẓar n wawal suduku===
+==Aẓar n wawal suduku==
 Ixef-a d ilem! 
-===Amezruy===
+==Amezruy==
 Ixef-a d ilem!
-===Ilugan n wurar===
+==Ilugan n wurar==
 Ixef-a d ilem!
