*Empty MediaWiki Message*

--- a/Iɣed.mw
+++ b/Iɣed.mw
@@ -1,6 +1,6 @@
-[[Tunga:Cigarette butts in ash.jpg|thumb|250px|Iɣed id yeǧǧan ɣef tmeṛɣiwt n usigaṛ]]
+[[Tugna:Cigarette butts in ash.jpg|thumb|250px|Iɣed id yeǧǧan ɣef tmeṛɣiwt n usigaṛ]]
 
-'''Iɣed''' d [[tanga]] id yettegrayen seld n teṛɣi n kra [[tanga tagmant|tenga tagmant]] yakk, dɣa iɣed iga d tanga tarimdeggit i [[Timeṛɣiwt|tmeṛɣiwt]] (ur yettṛuɣ ara) 
+'''Iɣed''' d [[tanga]] id yettegrayen seld n teṛɣi n kra [[tanga tagmant|tenga tagmant]] yakk, dɣa iɣed iga d tanga tarimdeggit i [[Timeṛɣiwt|tmeṛɣiwt]] (ur yettṛuɣ ara)
 
 == Asget d wasuf ==
 
