*Empty MediaWiki Message*

--- a/Alɣem.mw
+++ b/Alɣem.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}} 
-'''Alɣem''' ('''[[assaɣ usnan]]''': ''Camelus'') d [[tawsit (tudersent)|tawsit]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tileɣmatin|tleɣmatin]] deg [[tafesna (tasnudert)|tfesna]] n [[tisenfednin|tsenfednin]], yettwassen s [[takura|tkura]] n [[tassemt]] yellan sufell n [[azagur|uzagur-is]] umi qqaren '''Ameddis''' neɣ '''Tuhi''', [[acebbub]] n welɣem isem-is [[azaf]], Akken i llan-t snat n [[talmest|telmas]] n ileɣman: 
+'''Alɣem''' ('''[[assaɣ usnan]]''': ''Camelus'') d [[tawsit (tudersent)|tawsit]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tileɣmatin|tleɣmatin]] deg [[tafesna (tasnudert)|tfesna]] n [[tisenfednin|tsenfednin]], yettwassen s [[takura|tkura]] n [[tassemt]] yellan sufell n [[azagur|uzagur-is]] umi qqaren '''[[Ameddis]]''' neɣ '''Tuhi''', [[acebbub]] n welɣem isem-is [[azaf]], Akken i llan-t snat n [[talmest|telmas]] n ileɣman: 
 
 * '''[[Alɣem aserɣin]]''': yettidiren deg [[Tafriqt n ugafa|Tefrikt ugafa]] d [[asamar alemmas|usamar alemmas]] d [[Tazunegzirt taɛrabt|Tzunegzirt taserɣint]] 
 
