*Empty MediaWiki Message*

--- a/Alɣem.mw
+++ b/Alɣem.mw
@@ -14,3 +14,9 @@ Maca llan-t kra n telmas umi qqaren [[Tizulɣam]] deg [[tawacult (tasnudert)|twa
 Alɣem d deg Tmaziɣt d sin ilan (isɛan) aṭas n [[Agdawal|igdawalen]] am: '''Alem''', '''Allem''', '''Amagur''', '''Aram''', '''Amis''', '''Arejjan''', '''Arɣem''' 
 
 == Tannumi deg [[agama|ugama]] ==
+
+[[Taggayt:Tileɣmatin]]
+[[Taggayt:iɣersiwen]]
+[[Taggayt:Iɣersiwen imegruden]]
+[[Taggayt:Taksa]]
+[[Taggayt:timsuṭad]]
