*Empty MediaWiki Message*

--- a/Alɣem_aserɣin.mw
+++ b/Alɣem_aserɣin.mw
@@ -14,4 +14,8 @@ Alɣem yettwassen s [[iri (agman)|yiri-ynes]] ɣezzifen yemmugen am uneccab, d [
 
 == [[Agrad]] n welɣem ==
 
-==
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Iɣersiwen imegruden]]
+[[Taggayt:Taksa]]
+[[Taggayt:Tileɣmatin]]
