*Empty MediaWiki Message*

--- a/Amaynag.mw
+++ b/Amaynag.mw
@@ -18,3 +18,8 @@ Deg [[talmest]] n umaynag llan-t snat n telmas:
 * [[Alɣem aserɣin]]
 * [[Amaynag azagir]]
 * [[Amaynag amezday]]
+
+[[Taggayt:iɣersiwen]]
+[[Taggayt:iɣersiwen imegruden]]
+[[Taggayt:timsuṭad]]
+[[Taggayt:Taksa]]
