*Empty MediaWiki Message*

--- a/Amaynag.mw
+++ b/Amaynag.mw
@@ -23,3 +23,4 @@ Deg [[talmest]] n umaynag llan-t snat n telmas:
 [[Taggayt:iɣersiwen imegruden]]
 [[Taggayt:timsuṭad]]
 [[Taggayt:Taksa]]
+[[Taggayt:Tileɣmatin]]
