*Empty MediaWiki Message*

--- a/Llama.mw
+++ b/Llama.mw
@@ -12,3 +12,9 @@ Llama d [[aɣersiw]] iy [[agrad|gred]] seg zik issexdam-it i wezdam n tɣawsiwin
 == Ẓeṛ daɣen ==
 * [[Alpaka]]
 * [[Tileɣmatin]]
+
+[[Tileɣmatin]]
+[[Taggayt:Iɣersiwen imegruden]]
+[[Taggayt:Iɣersiwen]]
+[[Taggayt:Timsuṭad]]
+[[Taggayt:Taksa]]
