--- a/Llama.mw
+++ b/Llama.mw
@@ -13,7 +13,7 @@ Llama d [[aɣersiw]] iy [[agrad|gred]] seg zik issexdam-it i wezdam n tɣawsiwin
 * [[Alpaka]]
 * [[Tileɣmatin]]
 
-[[Tileɣmatin]]
+[[Taggayt:Tileɣmatin]]
 [[Taggayt:Iɣersiwen imegruden]]
 [[Taggayt:Iɣersiwen]]
 [[Taggayt:Timsuṭad]]
