*Empty MediaWiki Message*

--- a/Amaynag_azagir.mw
+++ b/Amaynag_azagir.mw
@@ -14,3 +14,7 @@ Amaynag azagir d talmest yettwaggzen s umihi n [[angar|wengar]] ɣef anect-a [[T
 * [[Tileɣmatin]]
 * [[Alɣem aserɣin]]
 * [[Amaynag]]
+
+[[Taggayt:Iɣersiwen]]
+[[Taggayt:Timsuṭad]]
+[[Taggayt:Tileɣmatin]]
