*Empty MediaWiki Message*

--- a/Alpaka.mw
+++ b/Alpaka.mw
@@ -5,3 +5,11 @@
 Alpaka d [[aɣersiw]] yettemcabin s waṭas ar [[llama]] acku kkan-d deg yiwet n [[tawacult (tasnudert)|twacult]]
 
 == Tikeli ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Iɣersiwen]]
+[[Taggayt:Iɣersiwen imegruden]]
+[[Taggayt:Tileɣmatin]]
+[[Taggayt:Taksa]]
+[[Taggayt:Timsuṭad]]
