*Empty MediaWiki Message*

--- a/Tafunast.mw
+++ b/Tafunast.mw
@@ -18,3 +18,10 @@
 == Tafunast deg [[Ajjed|yisɣanen]] ==
 
 == Tiwlafin ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Timestuga]]
+[[Taggayt:Iɣersiwen imegruden]]
+[[Taggayt:Iɣersiwen]]
+[[Taggayt:Taksa]]
