*Empty MediaWiki Message*

--- a/Aɣelmi.mw
+++ b/Aɣelmi.mw
@@ -4,3 +4,9 @@
 Aɣelmi d [[Asluffeẓ|aɣersiw amaffaẓ]], Amur ameqran n telmas-is d imegruden Yerna d [[Tafenzit|imesfenza]] 
 
 == Tilmas n uɣelmi ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Iɣersiwen]]
+[[Taggayt:Iɣersiwen imegruden]]
+[[Taggayt:Taksa]]
