*Empty MediaWiki Message*

--- a/Timibrikt_n_Liṭṭunya.mw
+++ b/Timibrikt_n_Liṭṭunya.mw
@@ -24,7 +24,6 @@ D iri i mmizweren i uyefki. Tettfaras 5200&nbsp;kg s usuḍeḍ n uyefki yesɛan
 
 == Tizmilin d timselɣa ==
 <references/>
-== Ẓer daɣen ==
 === Imagraden yeqqnen ===
 * [[Umuɣ n iran izegrawen]]
 * [[Bos taurus|Azegraw]]
@@ -35,4 +34,4 @@ D iri i mmizweren i uyefki. Tettfaras 5200&nbsp;kg s usuḍeḍ n uyefki yesɛan
 * (s tegnizit) [http://neurocad.lva.lt/Breeds/Breeds.htm Iran igfawiyen] ɣef N-EUROCAD
 * (s tṭelyanit) [http://agraria.org/razzebovineminori/latvian.htm Tanazalt n iran iluṭṭuniyen]. 
 
-[[Taggayt:Iri azegraw aliṭṭuni]]
+[[Taggayt:Taksa]]
