*Empty MediaWiki Message*

--- a/Tadɣaɣat.mw
+++ b/Tadɣaɣat.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tadɣaɣat''', ([[isem usnan]]: ''Mustela'') d yiwen n [[aɣersiw|uɣersiw]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tidɣaɣatin|tedɣaɣatin]] deg [[tafesna]] n [[timseksumin|temsuksumin]], dɣa [[tawsit (tudersent)|tawsit-a]] dges azal n 18 n [[talmest|telmas]].
+'''Tadɣaɣat''' ('''[[Assaɣ ussnan]]''': ''Mustela'') d yiwen n [[aɣersiw|uɣersiw]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tidɣaɣatin|tedɣaɣatin]] deg [[tafesna (tasnudert)|tfesna]] n [[timseksumin|temsuksumin]], dɣa [[tawsit (tudersent)|tawsit-a]] dges azal n 18 n [[talmest|telmas]].
 
 == Tilmas ==
 * [[Tadɣaɣat n izawaɣen]] (''Mustela eversmanii'')
