--- a/Tutlayt_tacawit.mw
+++ b/Tutlayt_tacawit.mw
@@ -19,10 +19,9 @@
 |notice=IPA
 }}
 
-'''Tacawit''' neɣ '''Tawrasyant''' d tutlayt iy ttmeslayen Yicawiyen, di temnaḍt n wedrar n Wawras (umi qqaṛen Yiṛomanen: ''Aurasius Mons''), di tmurt n [[Lezzayer]]. Tacawit tettekki deg tutlayin Timaziɣin. Asmi d-yura tajerrumt tameẓẓyant en Tcawit, G. Mercier (1896) yenna belli Imaziɣen izedɣen Awras semman iman-nsen ''Qbayel'', semman tutlayt-nsen ''haqbaylith''. Awal n Teɛrabt ''cawiya'' yella kra n yir awal, anamek-is d '''imeksawen'''. Maca d awal i iseqdecen aṭas, alarmi tura ula d imaziɣen n Wawras semman iman nsen ''Icawiyen'', yerna tutlayt-nsen ''Tacawit''.
+'''Tacawit''' neɣ '''Tawrasyant''' d [[tutlayt]] i ttmeslayen [[Icawiyen]] di temnadt n [[Awras]] deg usamar n tmurt n [[Lezzayer]]. Tacawit tettekki deg twacult n [[tutlayin timaziɣin]]. Asmi d-yura tajerrumt tameẓẓyant n Tcawit G. Mercier (1896) yenna d akken imaziɣen izedɣen Awras semman iman-nsen ''Qbayel'', semman tutlayt-nsen ''haqbaylith''. Awal n Teɛrabt ''cawiya'' yella kra n yir awal, anamek-is d '''imeksawen'''. Maca d awal i iseqdecen aṭas, alarmi tura ula d imaziɣen n awras semman iman nsen ''Icawiyen'', yerna tutlayt-nsen ''Tacawit''.
 
-Timaẓlayin (lwilayat) anda ttmeslayen tutlayt-agi d: [[Batna|Tabatent]], [[Xenclet]], [[Suq Ahras]], [[Um Lebwaqi]], [[Tebessa|Tbessa]], [[Qsenṭina]], tiɣawinin di wenẓul n [[Sṭif]] d umur n ugafa n tmaẓlayt (tawilayt) n [[Tibeskert|Tbeskert]]. 
-
+Timaẓlayin (lwilayat) anda ttmeslayen tutlayt-agi d: [[Batna|Tabatent]], [[Xenclet]], [[Suq Ahras]], [[Um Lebwaqi]], [[Tebessa|Tbessa]], [[Qsenṭina]], tiɣawinin di wenẓul n [[Sṭif]] d umur n ugafa n tmaẓlayt (tawilayt) n [[Tibeskert|Tbeskert]].
 
 ==Tasnimeslit en Tcawit==
 
