*Empty MediaWiki Message*

--- a/Tasiwit.mw
+++ b/Tasiwit.mw
@@ -14,7 +14,8 @@
 |glotto=siwi1239
 |glottorefname=Siwi
 }}
-Tasiwit d tutlayt tamziɣt n imezdaɣ imaziɣen n [[Isiwan]] (Siwa) di tmurt n [[Maṣer]].
+'''Tasiwit''' (s Tsiwit: '''Jlan isiwan''') d [[tutlayt]] [[tamziɣt]] ttmeslayen yis n imezdaɣ n [[Isiwan]] (Siwa) id yezgan deg ugafa utrim n tmurt n [[Maṣer|Miẓra]].
+
 == Ciṭ n Tsiwit ==
 
 {| class="wikitable"
