*Empty MediaWiki Message*

--- a/Tasiwit.mw
+++ b/Tasiwit.mw
@@ -14,7 +14,7 @@
 |glotto=siwi1239
 |glottorefname=Siwi
 }}
-'''Tasiwit''' (s Tsiwit: '''Jlan isiwan''') d [[tutlayt]] [[tamziɣt]] ttmeslayen yis n imezdaɣ n [[Isiwan]] (Siwa) id yezgan deg ugafa utrim n tmurt n [[Maṣer|Miẓra]].
+'''Tasiwit''' (s Tsiwit: '''Jlan isiwan''') d [[tutlayt]] [[tamaziɣt]] ttmeslayen yis n imezdaɣ n [[Isiwan]] (Siwa) id yezgan deg ugafa utrim n tmurt n [[Maṣer|Miẓra]].
 
 == Ciṭ n Tsiwit ==
 
