--- a/Tasiwit.mw
+++ b/Tasiwit.mw
@@ -14,7 +14,7 @@
 |glotto=siwi1239
 |glottorefname=Siwi
 }}
-'''Tasiwit''' (s Tsiwit: '''Jlan isiwan''') d [[tutlayt]] [[tamaziɣt]] ttmeslayen yis n imezdaɣ n [[Isiwan]] (Siwa) id yezgan deg ugafa utrim n tmurt n [[Maṣer|Miẓra]].
+'''Tasiwit''' (s Tsiwit: '''Jlan isiwan''') d [[tutlayt]] [[tamaziɣt]] ttmeslayen yis n imezdaɣ n [[Isiwan]] (Siwa) id yezgan deg ugafa utrim n tmurt n [[Maṣer|Miẓra]]. Amdan n yimsawalen s tutlayt-a d win yellan gar n 20,000 ar 45,000 n imsawalen
 
 == Ciṭ n Tsiwit ==
 
